# sublevel_delaunay

./: README.txt
benchmarks/: NOTES.txt  bifiltered_graph.sh  compute_bifiltered_graph.cpp  generate_summaries.py  run.sh
benchmarks/results/: graph_summaries.csv  notes.txt  summaries.csv
benchmarks/results/bifiltered_graph/: S1_density_500  S2_density_500  cube2_density_500  cube3_density_500  torus_density_500
benchmarks/results/bifiltered_graph_outputs/: S1_density_1000.txt  S1_density_500.txt  S2_density_1000.txt  S2_density_500.txt  cube2_density_1000.txt  cube2_density_500.txt  cube3_density_1000.txt  cube3_density_500.txt  torus_density_1000.txt  torus_density_500.txt
benchmarks/results/examples/: S1_density_1000  S1_density_16000  S1_density_2000  S1_density_32000  S1_density_4000  S1_density_500  S1_density_8000  S1_eccentricity_1000  S1_eccentricity_16000  S1_eccentricity_2000  S1_eccentricity_32000  S1_eccentricity_4000  S1_eccentricity_500  S1_eccentricity_8000  S1_height_1000  S1_height_16000  S1_height_2000  S1_height_32000  S1_height_4000  S1_height_500  S1_height_8000  S1_random_1000  S1_random_16000  S1_random_2000  S1_random_32000  S1_random_4000  S1_random_500  S1_random_8000  S2_density_1000  S2_density_16000  S2_density_2000  S2_density_32000  S2_density_4000  S2_density_500  S2_density_8000  S2_eccentricity_1000  S2_eccentricity_16000  S2_eccentricity_2000  S2_eccentricity_32000  S2_eccentricity_4000  (+100 more)
benchmarks/results/outputs/: S1_density_1000.txt  S1_density_1000_complex.txt  S1_density_1000_minpres0.txt  (+977 more)
benchmarks/results_high_dim/: notes.txt  summaries.csv
code/: CMakeLists.txt  alpha_from_gudhi.py  compare.sh  compute_bifiltered_graph.cpp  points_on_sphere.py  reduce_edges
code/include/bifiltered_graph/: Grade_map.h  bifiltered_edge.h  bifiltered_flag.h
code/include/function_delaunay/: Delaunay_triangulation_accessors.h  Grade_map.h  Meb_accessors.h  Miniball.hpp  Point_with_density.h  boost_timers.h  compute_meb_radii_of_simplex_tree.h  count_size_of_delaunay_triangulation.h  function_delaunay_with_meb.h  get_simplices_from_triangulation.h  mem_info.h
code/mpfree_mod/include/mpfree/: Graded_matrix.h  Grid_scheduler.h  boost_timers.h  global.h  mpfree.h  mpfree_subroutines.h
code/mpp_utils_mod/include/mpp_utils/: Coordinate_traits_with_map.h  Graded_matrix.h  Graded_matrix_handle.h  Pre_column_struct.h  basic.h  create_graded_matrices_from_pre_column_struct.h  create_graded_matrices_from_scc2020.h  create_graded_matrices_from_simplex_tree.h  create_matrix_from_firep.h
code/multi_chunk_mod/include/multi_chunk/: Graded_matrix.h  basic.h  boost_timers.h  multi_chunk.h
code/scc_mod/include/scc/: Column_data.h  Scc.h  basic.h
code/src/: compute_meb_radius_test.cpp  delaunay_flip_check_2.cpp  delaunay_flip_check_3.cpp  filtration_domination.cpp  main.cpp  persistence_up_to_density.cpp
(+95 files in other folders)
